# closedClass

./: TreeTagSets.cabal  blog.json  chain.json  coref.json  coref1.json  coref2.json  corefOrigEdit.json  coreforig.json  coreforigPretty.json  short1ud.txt  short2.json  stack.yaml  testExample (copy).cabalX  testExample.cabal  testSome.cabal  veryshort1ud.txt
Data/: Utilities.hs
Lib/: Belnap.hs  BlogExample.hs  ClosedClass.hs  CorefOnly.hs  CorefOnlyEdited.hs  DerivingExample.hs  DerivingExampleDerive.hs  DerivingMinimalExample.hs  Direct.hs  Distinction.hs  Doc1ToDoc0.hs  Doc2ToDoc0.hs  FirstSub.hs  GenericLF.hs  HListRecords.hs  Lattice.hs  OpenClass.hs  PaperTaxa.hs  ParseDepCode.hs  ParseJsonCoreNLP.hs  Peano.hs  Pointed.hs  PrettyPrintTest.hs  ProduceNLPtriples2.hs  SecondSub.hs  Taxon.hs  Tutorial1.hs
NLP/Corpora/: Brown.hs  Conll.hs  French.hs  FrenchUD.hs  German.hs  ItalianTinT.hs  Spanish.hs  UD.hs
NLP/Types/: General.hs  Tags.hs
src/: ClassMain (copy).hs  ClassMain.hs  ExampleTesting.hs  Main.hs  NotUsedMain.hs  TreeTagSetsTesting.hs
tests/: ExampleTesting.hs  TreeTagSetsTesting.hs
tests/Lib/: BlogExample_test (another copy).hs  BlogExample_test.hs  ClosedClass_test.hs  CorefOnlyEdited_test.hs  CorefOnly_test.hs  DerivingExample_test.hs  Doc1ToDoc0_test.hs  Lit_tests.hs  ParseJsonCoreNLP_test.hs  Pointed_tests.hs  Tutorial1_test.hs
tests/NLP/Corpora/: BrownTests.hs  ConllTests.hs
tests/NLP/Types/: IOBTests.hs  TreeTests.hs
