name: TreeTagSets
version: 0.0.1
cabal-version: >=1.20
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
synopsis: a collection of TreeTags
description:


author: Andrew U. Frank

library
    build-depends:
        base >=4.8 && <= 5
--        network-uri,
--        monads-tf,
        , HTF
--        bytestring,
--        text, utf8-string,
        -- for testing
        ,test-invariant
        , cereal
        , cereal-text
        , text
        , QuickCheck
        , quickcheck-instances
        , quickcheck-text
--        numeric-prelude,
--        snap-core,
--        safe,
--        vector,
--        -- fay-base,
--        split,
--        data-easy
----        uniform-algebras
--        ,uniform-strings

    exposed-modules:
                     NLP.Corpora.Brown
                     NLP.Corpora.Conll
--                     NLP.Corpora.UD
--                     NLP.Corpora.French
--                     NLP.Corpora.FrenchUD
--                     NLP.Corpora.German
--                     NLP.Corpora.Spanish
--                     NLP.Corpora.ItalianTinT
                     Data.Utilities
                     NLP.Types.Tags
                     NLP.Types.General
--        NLP.Corpora.BrownTests
--        NLP.Corpora.ConllTests
    default-language: Haskell2010
    hs-source-dirs: .

executable main
    main-is:    NotUsedMain.hs
    build-depends: base, HTF
            , TreeTagSets
--        , testExample >=0.0.2
--        , uniform-strings
--        , safe
--        -- , test-framework  -- clash with HTF
--        , test-invariant
--        , text
--        , snap-core
--        , network-uri
--        , bytestring
--        , quickcheck-text
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
--        StringConversion

Test-Suite TestAuto
    type:       exitcode-stdio-1.0
    main-is:    TreeTagSetsTesting.hs
    build-depends: base, HTF
            , TreeTagSets
--            , testExample >=0.0.2
--            , uniform-strings
--        , safe
        -- , test-framework
--        , test-invariant
--        , text
--        , snap-core
--        , network-uri
--        , bytestring
--        , quickcheck-text
    default-language: Haskell2010
    hs-source-dirs: tests

    other-modules:
        NLP.Corpora.BrownTests
        NLP.Corpora.ConllTests
--        StringConversion
