name: testExample
version: 0.0.3
cabal-version: >=1.20
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
synopsis: example for testing with HTF
description:


author: Andrew U. Frank

library
    build-depends:
        base >=4.8 && <= 5
        , HTF
        -- for testing
        , test-invariant
--        ,quickcheck-text
----        uniform-algebras
        , uniform-strings
        , pretty-show

    exposed-modules:
         Lib.PrettyPrintTest
    default-language: Haskell2010
    hs-source-dirs: .

executable main
    main-is:    ClassMain.hs
    build-depends:
        base
        , HTF
        , testExample
        , uniform-strings
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:

--Test-Suite TestAuto
--    type:       exitcode-stdio-1.0
--    main-is:    ExampleTesting.hs
--    build-depends: base, HTF
--            , testExample >=0.0.2
--            , uniform-strings
----        , safe
--        -- , test-framework
----        , test-invariant
----        , text
----        , snap-core
----        , network-uri
----        , bytestring
----        , quickcheck-text
--    default-language: Haskell2010
--    hs-source-dirs: src
--    other-modules:
----        StringConversion
