name: testExample
version: 0.0.3
cabal-version: >=1.20
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
synopsis: example for testing with HTF
description:


author: Andrew U. Frank

library
    build-depends:
        base >=4.8 && <= 5
        , text
--        network-uri,
--        monads-tf,
        , HTF
--        , bytestring
--        text, utf8-string,
        -- for testing
        , test-invariant
        , syb

    exposed-modules:
--            Lib.DerivingExample
--            Lib.DerivingExampleDerive
            Lib.DerivingMinimalExample
--         ClosedClass
--         Lib.BlogExample
--         Lib.Tutorial1
--         Lib.ParseJsonCoreNLP
--         Lib.CorefOnly
--         Lib.CorefOnlyEdited
--         Lib.Doc2ToDoc0
--         Lib.ProduceNLPtriples2
--        StringConversion
    --     Uniform.Strings
    -- -- for testing, afterwards include in test-suite
    --     Uniform.StringConversion
    --     Uniform.StringUtilities
    --     Uniform.StringInfix
    default-language: Haskell2010
    hs-source-dirs: .

Test-Suite TestAuto
    type:       exitcode-stdio-1.0
    main-is:    ExampleTesting.hs
    build-depends: base, HTF
            , testExample
            , text
--            , uniform-strings
--            , uniform-fileio
--            , uniform-convenience
--        , bytestring
--        , safe
        -- , test-framework
--        , test-invariant
--        , text
--        , snap-core
--        , network-uri
--        , bytestring
--        , quickcheck-text
--            , aeson
--            , utf8-string
--        , TreeTagSets
--        , litFoundation
--        , rdf4hextension
--        , NLPservices
--        , pretty-show
--        , generic-pretty
    default-language: Haskell2010
    hs-source-dirs: tests
    other-modules:
        Lib.DerivingExample_test
--         Lib.BlogExample_test
--         Lib.Tutorial1_test
--         Lib.ParseJsonCoreNLP_test
--         Lib.CorefOnly_test
--         Lib.CorefOnlyEdited_test
--         Lib.Doc2ToDoc0_test
--         Lib.ProduceNLPtriples2_test

--executable testExampleMain
--    main-is:    ClassMain.hs
--    build-depends: base, HTF
--        , testExample
----        , uniform-strings
----        , uniform-convenience
----            , uniform-fileio
----        , safe
----        -- , test-framework  -- clash with HTF
----        , test-invariant
----        , text
----        , snap-core
----        , network-uri
----        , bytestring
----        , quickcheck-text
----        , TreeTagSets
----        , litFoundation
----        , rdf4hextension
----        , NLPservices
----        , aeson
--    default-language: Haskell2010
--    hs-source-dirs: src
--    other-modules:
----        StringConversion

