name: testExample
version: 0.0.3
cabal-version: >=1.20
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
synopsis: example for testing with HTF
description:


author: Andrew U. Frank

library
    build-depends:
        base >=4.8 && <= 5
        , text
        , uniform-strings
        , HTF
        -- for testing
        , test-invariant
        -- , syb

    exposed-modules:
            Lib.DerivingMinimalExample
    default-language: Haskell2010
    hs-source-dirs: .

Test-Suite TestAuto
    type:       exitcode-stdio-1.0
    main-is:    ExampleTesting.hs
    build-depends: base, HTF
            , testExample
            , text
           , uniform-strings

        -- , test-framework
    default-language: Haskell2010
    hs-source-dirs: tests
    other-modules:
        Lib.DerivingExample_test

executable testExampleMain
   main-is:    ClassMain.hs
   build-depends: base, HTF
       , testExample
       , uniform-strings
   default-language: Haskell2010
   hs-source-dirs: src
   other-modules:

