name: testSome
version: 0.0.3
cabal-version: >=1.20
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
synopsis: example for testing with HTF
description:


author: Andrew U. Frank

library
    build-depends:
        base >=4.8 && <= 5
        , text
--        , HTF
--        , test-invariant
--        , uniform-strings
--        , uniform-error
--        network-uri,
        , monads-tf
        , transformers
--        bytestring,
--        text, utf8-string,
        -- for testing
--        ,quickcheck-text
--        numeric-prelude,
--        snap-core,
--        safe,
--        vector,
--        -- fay-base,
--        split,
--        data-easy
        , uniform-algebras
--        , HList

    exposed-modules:
         FirstSub
         SecondSub
    default-language: Haskell2010
    hs-source-dirs: Lib
--
--executable main
--    main-is:    ClassMain.hs
--    build-depends: base, HTF
--        , testSome
--        , uniform-strings
--        , uniform-convenience
----        , safe
----        -- , test-framework  -- clash with HTF
----        , test-invariant
----        , text
----        , snap-core
----        , network-uri
----        , bytestring
----        , quickcheck-text
--    default-language: Haskell2010
--    hs-source-dirs: src
--    other-modules:
----        StringConversion
--
Test-Suite TestAuto
    type:       exitcode-stdio-1.0
    main-is:    ExampleTesting.hs
    build-depends: base, HTF
            , testSome
            , uniform-strings
            , text
--        , safe
        -- , test-framework
--        , test-invariant
--        , text
--        , snap-core
--        , network-uri
--        , bytestring
--        , quickcheck-text
    default-language: Haskell2010
    hs-source-dirs: tests
    other-modules:
--        StringConversion
            Lib.Lit_tests
